# picea

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.sh  examples_common.rs  todo.md
.devcontainer/: devcontainer.json
crates/macro-tools/: Cargo.toml  README.md
crates/macro-tools/src/: accessors.rs  builder.rs  deref.rs  fields.rs  lib.rs
crates/macro-tools/tests/: accessors.rs  builder.rs  deref.rs  field.rs
crates/macro-tools/tests/ui/accessors/fail/: chained_setter.rs  chained_setter.stderr  enum.rs  enum.stderr  legacy_field_attr.rs  legacy_field_attr.stderr  reducer_option.rs  reducer_option.stderr  skip_on_struct.rs  skip_on_struct.stderr  skip_with_other_options.rs  skip_with_other_options.stderr  skip_with_visibility.rs  skip_with_visibility.stderr  tuple_struct.rs  tuple_struct.stderr
crates/macro-tools/tests/ui/accessors/pass/: basic.rs  fixed_api.rs
crates/macro-tools/tests/ui/builder/fail/: duplicate_default.rs  duplicate_default.stderr  duplicate_skip.rs  duplicate_skip.stderr  origin_default.rs  origin_default.stderr  reserved_build.rs  reserved_build.stderr  reserved_new.rs  reserved_new.stderr  skip_without_default.rs  skip_without_default.stderr  struct_level_attribute.rs  struct_level_attribute.stderr  tuple_struct.rs  tuple_struct.stderr  unsupported_option.rs  unsupported_option.stderr
crates/macro-tools/tests/ui/builder/pass/: basic.rs  generics.rs
crates/macro-tools/tests/ui/deref/fail/: deref_mut_without_opt_in.rs  deref_mut_without_opt_in.stderr  duplicate_attribute.rs  duplicate_attribute.stderr  duplicate_mut.rs  duplicate_mut.stderr  empty_args.rs  empty_args.stderr  enum.rs  enum.stderr  multi_target.rs  multi_target.stderr  name_value.rs  name_value.stderr  no_target.rs  no_target.stderr  tuple_struct.rs  tuple_struct.stderr  unit_struct.rs  unit_struct.stderr  unsupported_option.rs  unsupported_option.stderr
crates/macro-tools/tests/ui/deref/pass/: basic.rs  generics.rs  mut.rs
crates/picea/: Cargo.toml  LICENSE  README.md  examples_common.rs
crates/picea-lab/: Cargo.toml  README.md
crates/picea-lab/src/: artifact.rs  artifact_store.rs  cli.rs  error.rs  lib.rs  main.rs  recipes.rs  scenario.rs  scene_spec.rs  server.rs  viewer.rs
crates/picea-lab/tests/: artifact_run.rs  server_routes.rs
crates/picea-lab/web/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
crates/picea-lab/web/fixtures/contact-smoke/: debug_render.json  final_snapshot.json  perf.json  trace.jsonl
crates/picea-lab/web/scripts/: i18n-contract.mjs  ui-contract.mjs
crates/picea-lab/web/src/: App.tsx  api.ts  demo.ts  i18n.ts  styles.css  types.ts
crates/picea-lab/web/src/components/ui/: badge.tsx  button.tsx  input.tsx  panel.tsx  radix.tsx
crates/picea-lab/web/src/components/workbench/: Facts.tsx  Inspector.tsx  ResizeHandle.tsx  SceneHierarchy.tsx  Timeline.tsx  Toolbar.tsx  WorkbenchLayout.tsx  WorldCanvas.tsx  format.ts  selection.ts  types.ts
crates/picea/benches/: physics_scenarios.rs
crates/picea/examples/: accumulation.rs  bridge.rs  cloth.rs  conservation_of_momentum.rs  friction.rs  ground.rs  link.rs  newton_cradle.rs  pit.rs  stack.rs  stack2.rs
crates/picea/src/: body.rs  collider.rs  debug.rs  events.rs  handles.rs  joint.rs  lib.rs  pipeline.rs  query.rs  recipe.rs  world.rs
crates/picea/src/algo/: sort.rs
crates/picea/src/collision/: mod.rs
crates/picea/src/constraints/: contact.rs  contact_manifold.rs  join.rs  mod.rs  point.rs
crates/picea/src/element/: mod.rs  store.rs
crates/picea/src/math/: axis.rs  matrix.rs  mod.rs  num.rs  point.rs  segment.rs  vector.rs
crates/picea/src/meta/: mod.rs
crates/picea/src/pipeline/: broadphase.rs  ccd.rs  contacts.rs  gjk.rs  integrate.rs  island.rs  joints.rs  narrowphase.rs  sleep.rs  step.rs
crates/picea/src/scene/: context.rs  mod.rs
crates/picea/src/shape/: alias.rs  circle.rs  concave.rs  convex.rs  line.rs  polygon.rs  polygon_backup.rs  rect.rs  square.rs  triangle.rs  utils.rs
crates/picea/src/solver/: body_state.rs  contact.rs  mod.rs
crates/picea/src/tools/: collision_view.rs  mod.rs  observability.rs  snapshot.rs
crates/picea/src/world/: api.rs  contact_state.rs  error.rs  runtime.rs  store.rs
crates/picea/tests/: core_model_world.rs  math_algebra_regressions.rs  math_api_compile_fail.rs  physics_realism_acceptance.rs  query_debug_contract.rs  v1_api_smoke.rs  world_step_review_regressions.rs
crates/picea/tests/ui/math_legacy_api/: generic_math_types.rs  generic_math_types.stderr  legacy_vector_methods.rs  legacy_vector_methods.stderr  legacy_vector_operators.rs  legacy_vector_operators.stderr
examples/: accumulation.rs  bowl.rs  cloth.rs  concave.rs  d.rs  drag.rs  (+19 more)
picea/: Cargo.toml  examples_common.rs
picea-web/: Cargo.toml
picea-web/src/: lib.rs  type.d.ts  wasm.rs
picea/examples/: accumulation.rs  cloth.rs  friction.rs  ground.rs  link.rs  newton_cradle.rs  pit.rs  stack2.rs
picea/src/: lib.rs
picea/src/algo/: sort.rs
picea/src/constraints/: contact.rs  contact_manifold.rs  mod.rs  point.rs
picea/src/element/: mod.rs
picea/src/math/: mod.rs  segment.rs  vector.rs
picea/src/meta/: mod.rs
picea/src/scene/: context.rs  mod.rs
picea/src/shape/: circle.rs  concave.rs  convex.rs  line.rs  mod.rs  polygon.rs  rect.rs  square.rs  triangle.rs  utils.rs
picea/src/tools/: collision_view.rs  drag.rs  mod.rs  snapshot.rs
(+84 files in other folders)
