[package]
name = "picea"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm-web = [
  "dep:console_error_panic_hook",
  "dep:js-sys",
  'dep:serde',
  "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen",
]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.61", optional = true }
serde = { version = "1.0.158", features = ["derive"], optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }
wasm-bindgen = { version = "0.2.84", optional = true }

[dev-dependencies]
nannou = "0.18.1"
rand = "0.8.5"
