[package]
name = "picea-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
picea = { path = "../picea" }
console_error_panic_hook = { version = "0.1.7" }
derive_builder = "0.20.0"
js-sys = { version = "0.3.61" }
serde = { version = "1.0.158", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5" }
wasm-bindgen = { version = "0.2.84" }
macro-tools = { path = "../crates/macro-tools" }
