[package]
name = "picea-macro-tools"
version = "0.1.0"
edition = "2021"
authors = ["swnb", "async-rustacean"]
license-file = "LICENSE"
repository = "https://github.com/swnb/picea"
# homepage = ""
# documentation = ""
categories = ["picea", "macros"]
description = """
macro tools for picea
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.55", features = ["full"] }

[lib]
proc-macro = true
