[package]
name = "picea-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
picea = { path = "../picea" }
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
