[package]
name = "picea"
version = "0.1.0"
edition = "2021"
authors = ["swnb", "async-rustacean"]
license-file = "LICENSE"
repository = "https://github.com/swnb/picea"
# homepage = ""
# documentation = ""
categories = ["physic-engine", "graph"]
description = """
picea is a little physics engine. can alos be used in web(wasm).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picea"
path = "src/lib.rs"


[dependencies]
picea-macro-tools = { path = "../macro-tools", version = "0.1.0" }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.113"
speedy2d = "2.0.0"
serde = { version = "1.0.158", features = ["derive"] }
