[package]
name = "picea"
version = "0.1.0"
edition = "2021"
authors = ["swnb", "async-rustacean"]
license-file = "LICENSE"
repository = "https://github.com/swnb/picea"
# homepage = ""
# documentation = ""
categories = ["physic-engine", "graph"]
description = "Picea is a small 2D physics engine written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "picea"
path = "src/lib.rs"


[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
criterion = "0.8"
trybuild = "1.0.96"

[[bench]]
name = "physics_scenarios"
harness = false
